[package]
name = "dlpark"
version = "0.7.0"
edition = "2024"
description = "dlpack Rust binding for Python"
documentation = "https://docs.rs/dlpark"
readme = "README.md"
homepage = "https://crates.io/crates/dlpark"
repository = "https://github.com/SunDoge/dlpark"
license = "Apache-2.0"
exclude = [".github/"]

[workspace]
resolver = "2"
members = [
  "crates/dlpark-bindgen",
  "examples/dlparkimg",
  "examples/ndarray-candle"
]

[workspace.dependencies]
candle-core = "0.11"
cudarc = "0.19.2"
dlpark = {
  path = ".",
  default-features = false
}  # Add dlpark as a workspace dependency
half = "2.7"
image = "0.25"
ndarray = "0.17"
pyo3 = "0.29"
snafu = "0.9"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.9"
snafu = { workspace = true }

candle-core = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true, optional = true }
image = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }

[features]
default = []

pyo3 = ["dep:pyo3"]

# support f16 and bf16
half = ["dep:half"]
image = ["dep:image"]
ndarray = ["dep:ndarray"]

candle = ["dep:candle-core"]

cudarc = [
  "cudarc/cuda-version-from-build-system",
  "cudarc/fallback-latest",
  "dep:cudarc"
]

# Not supported yet — needs a CUDA toolchain to verify against candle's real (non-dummy) cuda backend
# candle-cuda = ["candle", "candle-core/cuda"]

# for examples/dlparkimg
[profile.dev.package."image"]
opt-level = 3
