[package]
name = "dlpark"
version = "0.8.0"
edition = "2024"
description = "dlpack Rust binding for Python"
documentation = "https://docs.rs/dlpark"
readme = "README.md"
homepage = "https://crates.io/crates/dlpark"
repository = "https://github.com/SunDoge/dlpark"
license = "Apache-2.0"
include = [
  "CHANGELOG.md",
  "Cargo.lock",
  "Cargo.toml",
  "LICENSE",
  "README.md",
  "benches/**",
  "examples/profile_builder.rs",
  "src/**",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["candle", "half", "image", "ndarray"]

[workspace]
resolver = "2"
members = [
  "crates/dlpark-bindgen",
  "examples/dlparkimg",
  "examples/ndarray-candle"
]

[workspace.dependencies]
candle-core = "0.11"
cudarc = "0.19.2"
dlpark = {
  path = ".",
  default-features = false
}  # Add dlpark as a workspace dependency
half = "2.7"
image = { version = "0.25", default-features = false }
ndarray = { version = "0.17", default-features = false, features = ["std"] }
pyo3 = "0.29"
snafu = "0.9"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "builder"

[dependencies]
bitflags = "2.9"
snafu = { workspace = true }

candle-core = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
half = { workspace = true, optional = true }
image = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.8.2"
pprof = { version = "0.15.0", features = ["flamegraph"] }

[features]
default = []

pyo3 = ["dep:pyo3"]

# support f16 and bf16
half = ["dep:half"]
image = ["dep:image"]
ndarray = ["dep:ndarray"]

candle = ["dep:candle-core"]

# CPU-only interop surface for regular tests. This intentionally excludes
# `cudarc` (CUDA runtime).
cpu-all = ["candle", "half", "image", "ndarray", "pyo3"]

# Feature set suitable for Miri. This intentionally excludes `pyo3`, whose
# tests call the Python C API.
miri = ["candle", "half", "image", "ndarray"]

cudarc = [
  "cudarc/cuda-version-from-build-system",
  "cudarc/fallback-latest",
  "dep:cudarc"
]

# Not supported yet — needs a CUDA toolchain to verify against candle's real (non-dummy) cuda backend
# candle-cuda = ["candle", "candle-core/cuda"]

[profile.dev.package."*"]
opt-level = 2

# For profiling with pprof/flamegraph: release-level optimizations, but with
# debug info kept so the symbolizer can resolve inlined-frame boundaries
# (plain `--release` strips this, which is why inlined functions like
# fixed-rank builder calls collapse into their caller in a flamegraph).
[profile.profiling]
inherits = "release"
debug = true
