[package]
name = "dlparkimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlparkimg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
dlpark = { path = "../../", features = ["pyo3"] }
image = "0.25.0"
