[package]
name = "dlparkimg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlparkimg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
dlpark = { workspace = true, default-features = false, features = [
    "pyo3",
    "image",
] }
image = { workspace = true }
