[project]
name = "dlparkimg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SunDoge", email = "triplez0@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "torch>=2.7.0",
]

[project.scripts]
dlparkimg = "dlparkimg:main"

[tool.maturin]
module-name = "dlparkimg._core"
python-packages = ["dlparkimg"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.8.6",
]
